<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2009 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="wallpapers">Happy New Year LWP</string>

    <!-- Wallpaper showing a cube -->

    <!-- Wallpaper showing a cube or dodecahedron, data read from resource -->

    <!-- Wallpaper showing a cube, renderscript version -->

    <string name="settings">Settings</string>
    <string name="share">ShareHappy New Year LWP</string>
    <string name="wallpaper_settings_title">Background</string>
    <string name="wallpaper_settings_summary">Choose your background image</string>
    <string name="snowfall_settings_title">Snowfall effect</string>
    <string name="snowfall_settings_summary">Choose snowfall effect</string>
    <string name="interactive_settings_title">Character Interactivity</string>
    <string name="interactive_settings_summary">Choose character interactivity</string>
    <string name="share_invite">Share via:</string>
    <string name="share_header">My choice!</string>
    <string name="share_text">Christmas live wallpaper for Android from Crystal Spring: play.google.com/store/apps/details?id=kz.crystalspring.livewallpaper</string>
    <string name="invite">Choose 1234 from list</string>
</resources>
